# chatgpt-playground

./: README.md
client/: Dockerfile  Makefile  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.css
client/src/components/Chat/: index.tsx  styles.scss
client/src/hooks/: useApi.ts
infra/: backend.tf  main.tf  project.tf  provider.tf  varialbes.tf
server/: .env.example  Dockerfile  Makefile  pyproject.toml
server/chatgpt_playground_server/: main.py
server/chatgpt_playground_server/classes/: session.py  session_manager.py
server/gptpg_server/: main.py
server/gptpg_server/classes/: handler.py  session.py  singleton.py
tinyproxy/: Dockerfile  tinyproxy.conf
