[tool.poetry]
name = "chatgpt-playground-server"
version = "0.1.0"
description = ""
authors = ["Marty Ko <marty.ko@kadensacapital.com>"]
readme = "README.md"
packages = [{include = "chatgpt_playground_server"}]

[tool.poetry.dependencies]
python = "^3.10"
chatgptpy = "^1.0.1"
flask = "^2.2.2"
flask-cors = "^3.0.10"

[tool.poetry.scripts]
dev = "chatgpt_playground_server.main:start_dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
