[tool.poetry]
name = "gptpg-server"
version = "0.1.0"
description = ""
authors = ["Marty Ko <marty.ko@kadensacapital.com>"]
readme = "README.md"
packages = [{include = "gptpg_server"}]

[tool.poetry.dependencies]
python = "^3.10"
chatgptpy = "^1.0.1"
flask = "^2.2.2"
flask-cors = "^3.0.10"
asgiref = "^3.5.2"
flask-sqlalchemy = "^3.0.2"
psycopg2-binary = {version = "^2.9.3", source = "test-pypi"}

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple"
secondary = true

[tool.poetry.scripts]
dev = "gptpg_server.main:start_dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
